--- a/index.html
+++ b/index.html
@@ -420,7 +420,8 @@
                     </div>
                     <div class="divider2"></div>
                     <div class="info-column">
-                        <div class="info-item">📞 7864456478</div>
+                        <div class="info-item">📞 7868856777</div>
+                        <a href="my-protfolio.html">link</a>
                         <div class="info-item">✉️ thirunithikamaraj@gamil.com</div>
                     </div>
                 </div>
